@@ -101,3 +101,4 @@ tempstream
 typetrait
 user
 x2a
+sharedcondition
