@@ -1,0 +1,7 @@
+#!/bin/bash
+
+(cd ..; icmbuild)
+
+g++ --std=c++0x -pthread -o driver -I.. -I. driver.cc -L../tmp -lsharedcondition -lbobcat
+
+(cd ..; icmbuild clean)
