@@ -1,0 +1,5 @@
+#include "sharedcondition.ih"
+
+SharedCondition::
+{
+}
