@@ -1,0 +1,4 @@
+#define LIBRARY             "sharedcondition"
+#define THREAD              "-pthread -I."
+
+#include "../icmconf"
