@@ -1,0 +1,4 @@
+inline void SharedCondition::notify() noexcept
+{
+    pthread_cond_signal(&d_cond);
+}
