@@ -1,0 +1,4 @@
+inline void SharedCondition::notify_all() noexcept
+{
+    pthread_cond_broadcast(&d_cond);
+}
