@@ -1,0 +1,4 @@
+#include "sharedcondition"
+
+using namespace std;
+using namespace FBB;
