@@ -1,0 +1,6 @@
+template <typename Predicate>
+void SharedCondition::wait(Predicate pred)
+{
+    while (not pred())
+        SharedCondition::wait();
+}
