@@ -1,0 +1,4 @@
+inline pthread_mutex_t *SharedMutex::mutexPtr()
+{
+    return &d_mutex;
+}
