@@ -20,9 +20,13 @@ class SharedMutex
 
         void lock();
         void unlock();
+
+    protected:
+        pthread_mutex_t *mutexPtr();
 };
 
 #include "unlock.f"
+#include "mutexptr.f"
 
 } // FBB        
 #endif
