@@ -12,6 +12,10 @@ bobcat (3.??.??)
   * Added SharedReadme (7bobcat) and associated figures describing how the
     Shared Memory classes were implemented.
 
+  * Added class SharedCondition, which is used to define a condition variable
+    in a shared memory segment.
+
+
 bobcat (3.22.01)
 
   * Hurd-i386 architectures do not (completely?) implement the POSIX standard,
